<resources>
    <string name="app_name">VoiceTubeTest</string>

    <!-- Toolbar -->
    <string name="toolbar_title">Voice Tube Test</string>

    <!-- Bottom Navigation -->
    <string name="list">List</string>
    <string name="timer">Timer</string>
    <string name="setting">Setting</string>

    <!-- General -->
    <string name="internet_refresh">開啟網路後記得下拉頁面刷新~</string>
    <string name="internet_not_connected">您尚未連接 Internet</string>
    <string name="internet_error">網絡發生錯誤</string>

    <!-- Timer Fragment -->
    <string name="set_time">設定時間</string>
    <string name="second">秒</string>
    <string name="submit">確定</string>
    <string name="timer_counting">計時器倒數中…</string>
    <string name="set_time_title">請輸入1~60之間的數字︰</string>
    <string name="error_message_60">不能大於60秒啦！</string>
    <string name="error_message_0">0秒是要倒數甚麼？</string>

    <!-- Setting Fragment -->
    <string name="auto_play">自動播放</string>
    <string name="subtitle_sync">字幕同步</string>
    <string name="stop_playing_video">查詢單字時暫停播放</string>
    <string name="video_recommended_notification">推薦影片提醒</string>
    <string name="learning_reminder_notification">學習通知</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="setting_title">設定</string>
    
</resources>
